@@ -180,6 +180,7 @@
 <li><a href="Tasks/unzip.html">Unwar</a></li>
 <li><a href="Tasks/unzip.html">Unzip</a></li>
 <li><a href="Tasks/uptodate.html">Uptodate</a></li>
+<li><a href="Tasks/verifyjar.html">VerifyJar</a></li>
 <li><a href="Tasks/vss.html#tasks">Microsoft Visual SourceSafe Tasks</a></li>
 <li><a href="Tasks/waitfor.html">Waitfor</a></li>
 <li><a href="Tasks/war.html">War</a></li>
